--- a/D3-005.html
+++ b/D3-005.html
@@ -54,14 +54,14 @@
     
     
 
-    var dataset = d3.csv("data/iso_c020_0300.UBVRIJHKLM.csv"/*, function (d) {
-      return {
-       +d,; 
-      };
-    }, function(error, rows) {
-      console.log(rows);
-    }*/);
-    console.log(dataset);
+    var dataset = d3.text("data/iso_c020_0300.UBVRIJHKLM.csv", function(text) {
+      var data = d3.csv.parseRows(text).map(function(row) {
+        return row.map(function(value) {
+          return +value;
+        });
+      });
+      console.log(data);
+    });
 
     var M = [];
     var L = [];
