--- a/D3-018.html
+++ b/D3-018.html
@@ -49,7 +49,7 @@
 
   form {
     position:fixed;
-    left:100px;
+    left:180px;
     top: 20px; 
     z-index:2;
     color:white;
@@ -82,7 +82,7 @@
 
   <script type="text/javascript">
 
-    var ages = [300, 500, 530, 559, 580, 590, 600, 605, 609, 615, 619, 625, 630, 634, 640, 644, 650, 655, 659, 665, 669, 675, 680, 684, 690, 694, 700, 705, 709, 715, 719, 725, 730, 734, 740, 744, 750, 755, 759, 765, 769, 775, 780, 784, 790, 794, 800, 805, 810, 814, 819, 825, 830, 835, 839, 844, 850, 855, 860, 864, 869, 875, 880, 885, 889, 894, 900, 905, 910, 914, 919, 925, 930, 935, 939, 944, 950, 955, 960, 964, 969, 975, 980, 985, 989, 994]; //86 data files
+    var ages = ["0300", "0500", "0530", "0559", "0580", "0590", "0600", "0605", "0609", "0615", "0619", "0625", "0630", "0634", "0640", "0644", "0650", "0655", "0659", "0665", "0669", "0675", "0680", "0684", "0690", "0694", "0700", "0705", "0709", "0715", "0719", "0725", "0730", "0734", "0740", "0744", "0750", "0755", "0759", "0765", "0769", "0775", "0780", "0784", "0790", "0794", "0800", "0805", "0810", "0814", "0819", "0825", "0830", "0835", "0839", "0844", "0850", "0855", "0860", "0864", "0869", "0875", "0880", "0885", "0889", "0894", "0900", "0905", "0910", "0914", "0919", "0925", "0930", "0935", "0939", "0944", "0950", "0955", "0960", "0964", "0969", "0975", "0980", "0985", "0989", "0994", "1000", "1005", "1010", "1014", "1019"]; //91 data files
 
     var age = 0, // initial age is 0 (ages[0] => 300)
         t = ages[age], // age, time as log, so 10^t (example: t = ages[1] => t = 300)
@@ -139,7 +139,7 @@
 
     var plusMinus = "+"; // counter starts positive (because up === true)
 
-    var dataValue = 1; // 1 -> 86
+    var dataValue = 0; // 1 -> 91
 
     var sparsity = 3; // renders every x'th row in the dataset array (for example: sparsity = 2 results in 0, 2, 4, 6, ...) 
                       // This produces more / less stars but equal amount of isochrones!!
@@ -244,13 +244,13 @@
                               .attr("class", "fxgroup effects");
 
     // Define the Scale for Teff (x)
-    var TeffAxisScale = d3.scale.linear()
-                                .domain([4.7, 3.4])
-                                .range([padding, w-padding]);
+    var TeffAxisScale = d3.scale.log()
+                                .domain([Math.pow(10, 4.7), Math.pow(10, 3.4)])
+                                .range([2*padding, w-padding]);
 
     // Define the Scale for L (y)
-    var LAxisScale = d3.scale.linear()
-                             .domain([6.5, -2])
+    var LAxisScale = d3.scale.log()
+                             .domain([Math.pow(10, 6.5), Math.pow(10, -2)])
                              .range([padding, h-padding]);
 
     //Define the Scale for R (size circles)
@@ -265,7 +265,7 @@
 
     var enlargementScale = d3.scale.linear()
                                    .domain([1200, 600, 100, 30, 10, 2, 0.800])
-                                   .range([1, 10, 30, 100, 300, 500, 600]);
+                                   .range([3, 10, 30, 100, 300, 500, 600]);
 
     var gradientScale = d3.scale.linear()
                                 .domain([1200, 100, 0.800])
@@ -275,28 +275,28 @@
     var TeffAxis = d3.svg.axis()
                          .scale(TeffAxisScale)
                          .orient("bottom")
-                         .ticks(5);
-    
+                         .tickFormat(function (d) { return TeffAxisScale.tickFormat(20,d3.format(",d")) (d) });
+
     // Create label on TeffAxis (x)
     var TeffAxisLabel = svgContainer.append("text")
                                .attr("class", "teff-label label")
-                               .attr("x", w - (padding + 5))
-                               .attr("y", h - (padding + 5))
+                               .attr("x", w - (padding))
+                               .attr("y", h - (padding + 10))
                                .attr("text-anchor", "end")
-                               .text("logTeff");
+                               .text("Effective temperature (K)");
 
     // Create the LAxis (y)
     var LAxis = d3.svg.axis()
                       .scale(LAxisScale)
                       .orient("left")
-                      .ticks(7);
+                      .tickFormat(function (d) { return LAxisScale.tickFormat(10,d3.format(",")) (d) });
 
     // Create label on LAxis (y)
     var LAxisLabel = svgContainer.append("text")
                            .attr("class", "l-label label")
-                           .attr("x", padding + 5)
+                           .attr("x", padding*2 + 10)
                            .attr("y", padding + 5)
-                           .text("logL");
+                           .text("Luminosity (L☉)");
     
     // Create an SVG group Element for the TeffAxis elements and call the TeffAxis function (x)
     var TeffAxisGroup = svgContainer.append("g")
@@ -307,7 +307,7 @@
     // Create an SVG group Element for the TeffAxis elements and call the TeffAxis function (x)
     var LAxisGroup = svgContainer.append("g")
                                     .attr("class", "text l-axis axis")
-                                    .attr("transform", "translate(" + padding + ", 0)")
+                                    .attr("transform", "translate(" + 2*padding + ", 0)")
                                     .call(LAxis);
 
     // Create an SVG group Element for the circles/stars
@@ -383,6 +383,7 @@
     var pause = function () {
       if (paused === false) {
         paused = true;
+        timeFactorTemp = timeFactor; // temporarily store the value of timefactor for when unpause happens
         timeFactor = 0;
         plusMinus = "";
         speed = 500;
@@ -391,7 +392,7 @@
         document.getElementById("faster-button").disabled = true;
       } else if (paused === true) {
         paused = false;
-        timeFactor = 10000;
+        timeFactor = timeFactorTemp;
         speed = 4;
         if (up === true) {
           plusMinus = "+";
@@ -477,7 +478,7 @@
     //Update the time
     function updateTime () {
   
-        if (up === true) {
+        if (up) {
           time = time + timeFactor;
         } else {
           time = time - timeFactor;
@@ -488,7 +489,7 @@
   
         if (paused === false) {
   
-          if (up === true && time >= tIndex) {
+          if (up && time >= tIndex) {
   
             if (dataValue < ages.length) {
                 dataValue ++;
@@ -542,13 +543,13 @@
 
 
     //Function that does the magic
-    function updateDiagram(event){
+    function updateDiagram(){
       // age = Math.round(dataValue) - 1;
-      t = ages[age];
+      t = ages[age - 1];
+      console.log(t);
+      console.log(age);
 
       drawDiagram(); //fill svgContainer with stellar goodness
-
-      return false;
 
     };
 
@@ -568,7 +569,7 @@
 
 
       // Import dataset from csv and parse it to array called dataset
-      d3.text("data/iso_c020_0" + t + ".UBVRIJHKLM.csv", function(text) {
+      d3.text("data/iso_c020_" + t + ".UBVRIJHKLM.csv", function(text) {
         var data = d3.csv.parseRows(text).map(function(row) {
           return row.map(function(value) {
             return +value;
@@ -697,8 +698,8 @@
                                   .append("circle")
                                   .attr("class", "star")
                                   .attr("id", function(d) {return "star-" + t + "-" + d[0]})
-                                  .attr("cx", function(d) {return TeffAxisScale(d[3]); })
-                                  .attr("cy", function(d) {return LAxisScale(d[2]); })
+                                  .attr("cx", function(d) {return TeffAxisScale(Math.pow(10, d[3])); })
+                                  .attr("cy", function(d) {return LAxisScale(Math.pow(10, d[2])); })
                                   .attr("r", function(d) {return RScale(d[4]); })
                                   // .attr("fill", function(d) {return cScale(d[3]); })
                                   .attr("fill", function(d) {return "url(#gradient-" + t + "-" + d[0] + ")"} )
