--- a/D3-020.html
+++ b/D3-020.html
@@ -1268,9 +1268,9 @@
                                      .text("Least massive = " + min_M + " Msol");
   
       pause();
-      });
+      }); // end isochrone 
 
-    };
+    }; // end drawDiagram();
 
 
     function numberSeparator(x) {
