--- a/story/002g.html
+++ b/story/002g.html
@@ -20,10 +20,6 @@
     text {
       font-size: 20px;
     }
-
-    html {
-      cursor: none;
-    }
     canvas { 
       width: 100%; 
       height: 100% 
@@ -62,7 +58,7 @@
       coldColor = d3.rgb("#ffd5a1"), // cold color in the graph
       coldestColor = d3.rgb("#ff5200"); // coldest color in the graph
 
-      d3.select("body").style("background-color", "black");
+      d3.select("body").style("background-color", designerBlack);
 
 
 
@@ -75,7 +71,6 @@
 
   // Create defs in the svg
   var defs = svg.append("defs");
-  var filter = defs.append("filter").attr("id","filter");
   var fxGroup = svg.append("g").attr("id", "fx-group");
   var starsGroup = svg.append("g").attr("id","stars-group");
   var sunGroup = svg.append("g").attr("id","sun-group");
@@ -84,11 +79,6 @@
   var planetWorldGroup = planetGroup.append("g").attr("id", "planet-world-group");
   var planetLightGroup = planetGroup.append("g").attr("id", "planet-light-group");
   var planetShadeGroup = planetGroup.append("g").attr("id", "planet-shade-group");
-
-  var gaussian = filter.append("feGaussianBlur").attr("in", "SourceGraphic").attr("stdDeviation", 2);
-  d3.select("#planet-shade-group").attr("filter", "url(#filter)");
-  d3.select("#planet-light-group").attr("filter", "url(#filter)");
-
 
 
   // Define starglow gradient structure in defs
@@ -104,7 +94,7 @@
 
   var rScale = d3.scale.linear()
                        .domain([-26.74, -2, 6])
-                       .range([500, 2, .1])
+                       .range([1100, 2, .1])
 
   // Create the projection for the backdrop of stars
   var skyProjection = d3.geo.stereographic()
@@ -130,19 +120,13 @@
   // Create the projection for the sphere
   var sphereProjection = d3.geo.orthographic()
                          .clipAngle(90)
-                         .scale(200)
-                         .translate([w / 2, h / 2])
-                         .precision(.1);
-
-  var sphereGlowProjection = d3.geo.orthographic()
-                         .clipAngle(100)
-                         .scale(210)
+                         .scale(100)
                          .translate([w / 2, h / 2])
                          .precision(.1);
 
   var worldProjection = d3.geo.orthographic()
-                         .clipAngle(87)
-                         .scale(200)
+                         .clipAngle(85)
+                         .scale(100)
                          .translate([w / 2, h / 2])
                          .precision(.1);
 
@@ -153,10 +137,10 @@
                  .projection(worldProjection);
 
   var sphereLightPath = d3.geo.path()
-                 .projection(sphereGlowProjection);
+                 .projection(sphereProjection);
 
   var sphereShadePath = d3.geo.path()
-                 .projection(sphereGlowProjection);
+                 .projection(sphereProjection);
 
   var graticule = d3.geo.graticule();
 
@@ -165,10 +149,10 @@
     .data( full_json.features )
     .enter()
     .append( "path" )
-    .attr( "fill", designerBlack)
+    .attr( "fill", d3.rgb("#9B678C").darker(2))
     .attr( "d", sphereSeaPath )
     .style("opacity", 0)
-    .transition().duration(2000)
+    .transition().delay(500).duration(2000)
     .style("opacity", 1);
 
   // Call the path for the landmasses on the sphere
@@ -181,7 +165,7 @@
         .style("fill", designerWhite)
         .attr("d", sphereWorldPath)
         .style("opacity", 0)
-        .transition().duration(1500)
+        .transition().delay(500).duration(2000)
         .style("opacity", 1);
 
   });
@@ -202,11 +186,16 @@
     .data( half_shade_json.features )
     .enter()
     .append( "path" )
-    .attr( "fill", "black")
+    .attr( "fill", d3.rgb("#9B678C").darker(4))
     .attr( "d", sphereShadePath )
     .style("opacity", 1)
-    .transition().delay(200).duration(2000)
-    .style("opacity", .95);
+    .transition().duration(2000)
+    .style("opacity", .98);
+
+  // Draw glow behind the sun
+  d3.select(".star-0").style("fill", "url(#radial-gradient)")
+                      // .attr("transform", "scale(10,10)");
+
 
   var λ = d3.scale.linear()
     .domain([0, w])
@@ -216,43 +205,46 @@
       .domain([0, h])
       .range([90, -90]);
   
-  svg.on("mousemove", function() {
-    var p = d3.mouse(this);
-    console.log(p);
-    skyProjection.rotate([λ(p[0]), φ(p[1])]);
-    starsGroup.selectAll("path").attr("d", skyPath);
-    sphereGlowProjection.rotate([-λ(p[0]), -φ(p[1])]);
-    planetLightGroup.selectAll("path").attr("d", sphereLightPath);
-    planetShadeGroup.selectAll("path").attr("d", sphereShadePath);
-  });
+  // svg.on("mousemove", function() {
+  //   var p = d3.mouse(this);
+  //   console.log(p);
+  //   skyProjection.rotate([λ(p[0]), φ(p[1])]);
+  //   starsGroup.selectAll("path").attr("d", skyPath);
+  //   sphereProjection.rotate([-λ(p[0]), -φ(p[1])]);
+  //   planetLightGroup.selectAll("path").attr("d", sphereLightPath);
+  //   planetShadeGroup.selectAll("path").attr("d", sphereShadePath);
+  // });
 
-  var velocity = 0.02,
-      then = Date.now();
+  var velocity = 0.012,
+      then = Date.now(),
+      movement = 0;
 
   d3.timer(function() {
-    var movement = velocity * (Date.now() - then);
+    movement = velocity * (Date.now() - then);
 
-    // skyProjection.rotate([-movement, movement/20]);
-    // starsGroup.selectAll("path").attr("d", skyPath);
+    skyProjection.rotate([-movement, movement/20]);
+    starsGroup.selectAll("path").attr("d", skyPath);
 
-    // sphereProjection.rotate([movement, -movement/20]);
-    // sphereGlowProjection.rotate([movement, -movement/20]);
-    // planetLightGroup.selectAll("path").attr("d", sphereLightPath);
-    // planetShadeGroup.selectAll("path").attr("d", sphereShadePath);
+    sphereProjection.rotate([movement, -movement/20]);
+    planetLightGroup.selectAll("path").attr("d", sphereLightPath);
+    planetShadeGroup.selectAll("path").attr("d", sphereShadePath);
 
-    worldProjection.rotate([movement, 0]);
+    worldProjection.rotate([movement*2, -movement/20]);
     planetWorldGroup.selectAll("path").attr("d", sphereWorldPath);
   });
 
-  
-  // Draw glow behind the sun
-  d3.select(".star-0").style("fill", "url(#radial-gradient)")
-                      // .attr("transform", "scale(10,10)");
+  // var rangeScale = 1100;
 
-  // d3.selectAll(".star:not(.star-0):nth-of-type(odd)").remove();
-  d3.selectAll(".star:not(.star-0)").remove();
+  var rangeScale = d3.interpolateNumber(10, 120);
 
-  
+  d3.timer(function () {
+    if (movement >= 80 && movement < 97) {
+      rScale.range([rangeScale(0), 2, .1])
+    } else {
+      rScale.range([rangeScale(1), 2, .1])
+    }
+  });
+
   var drawText = svg.append("text")
                     .attr("x", w/2)
                     .attr("y", h - paddingH)
@@ -271,7 +263,7 @@
                     .attr("id", "suntext")
                     .attr("class", "label suntext")
                     .attr("text-anchor", "middle")
-                    .text("Nighttime, daytime.")
+                    .text("You live here.")
                     .style("fill", "white")
                     .style("opacity", 0)
                     .transition().delay(3000).duration(2000)
