--- a/story/002h.html
+++ b/story/002h.html
@@ -310,7 +310,7 @@
                     .attr("id", "suntext-2")
                     .attr("class", "label suntext")
                     .attr("text-anchor", "middle")
-                    .text("Right now is " + now +".")
+                    .text(now)
                     .style("fill", "white")
                     .style("opacity", 0)
                     .transition().delay(1000).duration(2000)
