--- a/story/002h.html
+++ b/story/002h.html
@@ -24,9 +24,17 @@
       width: 100%; 
       height: 100% 
     }
+    .graticule {
+      fill: none;
+      stroke: #777;
+      stroke-width: .5px;
+      stroke-opacity: .5;
+    }
+
   </style>
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-  <script src="//d3js.org/topojson.v1.min.js"></script>
+  <script src="http://d3js.org/d3.geo.projection.v0.min.js" charset="utf-8"></script>
+  <script src="http://d3js.org/topojson.v1.min.js"></script>
   <script src="data/stars.6.js" charset="utf-8"></script>
   <script src="data/world.110m.js" charset="utf-8"></script>
   <script src="data/half.js" charset="utf-8"></script>
@@ -82,7 +90,7 @@
   var planetLightGroup = planetGroup.append("g").attr("id", "planet-light-group");
   var planetShadeGroup = planetGroup.append("g").attr("id", "planet-shade-group");
 
-  var gaussian = filter.append("feGaussianBlur").attr("in", "SourceGraphic").attr("stdDeviation", 2);
+  var gaussian = filter.append("feGaussianBlur").attr("in", "SourceGraphic").attr("stdDeviation", 5);
   d3.select("#planet-shade-group").attr("filter", "url(#filter)");
   d3.select("#planet-light-group").attr("filter", "url(#filter)");
 
@@ -169,6 +177,11 @@
 
   var graticule = d3.geo.graticule();
 
+  var graticulePath = svg.append("path")
+                         .datum(graticule)
+                         .attr("class", "graticule")
+                         .attr("d", sphereWorldPath);
+
   // Call the path for the bottom layer of the sphere
   // planetSeaGroup.selectAll( "path" )
   //   .data( full_json.features )
@@ -241,7 +254,7 @@
   //   planetShadeGroup.selectAll("path").attr("d", sphereShadePath);
   // });
 
-  var speedup = 0;
+  var speedup = 1;
 
   var velocityDay = 1/86400000 * speedup,
       velocityYear = 1/(3.1556926 * Math.pow(10,10)) * speedup,
@@ -265,30 +278,32 @@
   // planetShadeGroup.selectAll("path").attr("d", sphereShadePath);
 
   d3.timer(function() {
-    movementDay = velocityDay * (Date.now() - then) + ((360/24)*now.getUTCHours());
-    movementYear = velocityYear * (Date.now() - then) + ((360/365.75)*(365.75+80+day));
+    movementDay = velocityDay * (Date.now() - then) + (360/24)*(now.getUTCHours()-10) + (360/24/60)*now.getMinutes();
+    movementYear = velocityYear * (Date.now() - then) + (360/365.25)*(-80+day);
 
     // skyProjection.rotate([-movementYear, 45]);
     // starsGroup.selectAll("path").attr("d", skyPath);
 
-    sunProjection.rotate([movementYear, 23]);
+    sunProjection.rotate([movementYear, -23.5]);
     sunGroup.selectAll("path").attr("d", sunPath);
 
-    sphereProjection.rotate([movementYear, 23]);
-    planetLightGroup.selectAll("path").attr("d", sphereLightPath);
-    planetShadeGroup.selectAll("path").attr("d", sphereShadePath);
+    // sphereProjection.rotate([movementYear, 23.5]);
+    // planetLightGroup.selectAll("path").attr("d", sphereLightPath);
+    // planetShadeGroup.selectAll("path").attr("d", sphereShadePath);
 
-    sphereGlowProjection.rotate([movementYear, 23]);
+    sphereProjection.rotate([movementYear, -23.5]);
+    sphereGlowProjection.rotate([movementYear, -23.5]);
     planetLightGroup.selectAll("path").attr("d", sphereLightPath);
     planetShadeGroup.selectAll("path").attr("d", sphereShadePath);
 
     worldProjection.rotate([movementDay, 0]);
     planetWorldGroup.selectAll("path").attr("d", sphereWorldPath);
+    d3.selectAll(".graticule").attr("d", sphereWorldPath);
 
     var thisMoment = new Date();
 
     if (textDrawn) {
-      d3.select("#suntext-2").text("Right now is: " + thisMoment + ".")
+      d3.select("#suntext-2").text(thisMoment);
     }
   });
 
