--- a/story/001b.html
+++ b/story/001b.html
@@ -231,7 +231,7 @@
                     .attr("id", "suntext")
                     .attr("class", "label suntext")
                     .attr("text-anchor", "middle")
-                    .text("This is an open cluster.")
+                    .text("This is a globular cluster.")
                     .style("fill", "white")
                     .style("opacity", 0)
                     .transition().delay(1000).duration(2000)
