--- a/story/002a.html
+++ b/story/002a.html
@@ -39,7 +39,8 @@
       paddingH = h/10;
 
   // COLORS    
-  var designerBlack = d3.rgb("#1F2426"), // Define a nice black color for the background, store it as var
+  // var designerBlack = d3.rgb("#12141A"), // Define a nice black color for the background, store it as var
+     var designerBlack = d3.rgb("#000000"),
       designerRed = d3.rgb("#c83c46"),
       designerWhite = d3.rgb("#ffe9d2");
 
@@ -70,21 +71,31 @@
   // Define starglow gradient structure in defs
   var starGlowGradient = defs.append("radialGradient").attr("id", "radial-gradient").attr("cx", "50%").attr("cy", "50%");
 
-  starGlowGradient.append("stop").attr("offset", "000%").style("stop-color", "#ffe9d2").style("stop-opacity", "1");
-  starGlowGradient.append("stop").attr("offset", "010%").style("stop-color", "#ffe9d2").style("stop-opacity", ".8");
-  starGlowGradient.append("stop").attr("offset", "020%").style("stop-color", "#ffe9d2").style("stop-opacity", ".2");
-  starGlowGradient.append("stop").attr("offset", "030%").style("stop-color", "#ffe9d2").style("stop-opacity", ".1");
-  starGlowGradient.append("stop").attr("offset", "100%").style("stop-color", "#ffe9d2").style("stop-opacity", ".0");
+  starGlowGradient.append("stop").attr("offset", "0%").style("stop-color", "#FFFFFF").style("stop-opacity", "1");
+  // starGlowGradient.append("stop").attr("offset", "1.058%").style("stop-color", "#FAFAE6").style("stop-opacity", "1");
+  // starGlowGradient.append("stop").attr("offset", "1.060%").style("stop-color", "#FBF2D6").style("stop-opacity", ".97");
+  // starGlowGradient.append("stop").attr("offset", "1.56%").style("stop-color", "#FDE4B9").style("stop-opacity", ".9");
+    starGlowGradient.append("stop").attr("offset", "2.56%").style("stop-color", "#FDE4B9").style("stop-opacity", "1");
+  starGlowGradient.append("stop").attr("offset", "5.87%").style("stop-color", "#FFDBA6").style("stop-opacity", ".2");
+  // starGlowGradient.append("stop").attr("offset", "2.08%").style("stop-color", "#FFD8A0").style("stop-opacity", ".8");
+  starGlowGradient.append("stop").attr("offset", "100%").style("stop-color", "#9B678C").style("stop-opacity", "0");
 
 
-  var rScale = d3.scale.sqrt()
-                       .domain([-1.2, 6])
-                       .range([5.5, .4])
+  var rScale = d3.scale.pow()
+                       .exponent(.3)
+                       .domain([-1.2, 8])
+                       .range([2, .05])
+
+  var zoom = d3.behavior.zoom()
+    .translate([0, 0])
+    .scale(1)
+    .scaleExtent([1, 50])
+    .on("zoom", zoomed);
 
   // Create the projection
   var projection = d3.geo.stereographic()
                          .clipAngle(90)
-                         .scale(1100)
+                         .scale(800)
                          .translate([w / 2, h / 2])
                          .precision(.1);
 
@@ -92,23 +103,26 @@
                    .projection(projection)
                    .pointRadius(function(d) { return rScale(d.properties.mag);})
 
-starsGroup.selectAll( "path" )
-  .data( stars_six_json.features )
-  .enter()
-  .append( "path" )
-  .attr("class", function(d) { return "star star-" + d.id})
-  .attr( "fill", designerWhite )
-  .style("opacity", 0)
-  .attr( "d", path )
-  .transition().duration( function() { return Math.random() * (5000 - 2000) + 2000})
-  .style("opacity", 1);
+svg.call(zoom);
 
 // starsGroup.selectAll( "path" )
-//   .data( stars_eight_json.features )
+//   .data( stars_six_json.features )
 //   .enter()
 //   .append( "path" )
-//   .attr( "fill", designerWhite )
-//   .attr( "d", path );
+//   .attr("class", function(d) { return "star star-" + d.id})
+//   .attr( "fill", "url(#radial-gradient)" )
+//   .style("opacity", 1)
+//   .attr( "d", path )
+  // .transition().duration( function() { return Math.random() * (5000 - 2000) + 2000})
+  // .style("opacity", 1);
+
+starsGroup.selectAll( "path" )
+  .data( stars_eight_json.features )
+  .enter()
+  .append( "path" )
+  // .attr( "fill", "url(#radial-gradient)" )
+  .attr("fill", "white")
+  .attr( "d", path );
 
   var λ = d3.scale.linear()
     .domain([0, w])
@@ -126,6 +140,21 @@ starsGroup.selectAll( "path" )
   
   d3.select(".star-0").remove();
 
+  //   var velocity = 0.001,
+  //     then = Date.now();
+
+  // d3.timer(function() {
+  //   var movement = velocity * (Date.now() - then);
+
+  //   projection.rotate([-movement, 0]);
+  //   starsGroup.selectAll("path").attr("d", path);
+  // });
+
+function zoomed() {
+  starsGroup.attr("transform", "translate(" + d3.event.translate + ")scale(" + d3.event.scale + ")");
+  starsGroup
+  // starsGroup.select(".county-border").style("stroke-width", .5 / d3.event.scale + "px");
+}
 
   // // Draw some big stars
   // for (i = 0; i <= 45; i++) {
@@ -179,17 +208,17 @@ starsGroup.selectAll( "path" )
   //                            .style("opacity", 1);
   // }
 
-  var drawText = svg.append("text")
-                    .attr("x", w/2)
-                    .attr("y", h - paddingH)
-                    .attr("id", "suntext")
-                    .attr("class", "label suntext")
-                    .attr("text-anchor", "middle")
-                    .text("These are the brightest stars in the sky.")
-                    .style("fill", "white")
-                    .style("opacity", 0)
-                    .transition().delay(1000).duration(2000)
-                    .style("opacity", 1);
+  // var drawText = svg.append("text")
+  //                   .attr("x", w/2)
+  //                   .attr("y", h - paddingH)
+  //                   .attr("id", "suntext")
+  //                   .attr("class", "label suntext")
+  //                   .attr("text-anchor", "middle")
+  //                   .text("These are the brightest stars in the sky.")
+  //                   .style("fill", "white")
+  //                   .style("opacity", 0)
+  //                   .transition().delay(1000).duration(2000)
+  //                   .style("opacity", 1);
 
   </script>
 </body>
