--- a/story/002h.html
+++ b/story/002h.html
@@ -139,6 +139,14 @@
   //   .attr( "fill", designerWhite )
   //   .attr( "d", skyPath )
 
+  var zoom = d3.behavior.zoom()
+    .translate([0, 0])
+    .scale(1)
+    .scaleExtent([1, 10])
+    .on("zoom", zoomed);
+
+  svg.call(zoom);
+
   sunGroup.selectAll( "path" )
     .data( sun_json.features )
     .enter()
@@ -177,10 +185,13 @@
 
   var graticule = d3.geo.graticule();
 
-  var graticulePath = svg.append("path")
-                         .datum(graticule)
-                         .attr("class", "graticule")
-                         .attr("d", sphereWorldPath);
+  var graticuleGroup = svg.append("g")
+                          .attr("class", "graticule-group") 
+
+  var graticulePath = graticuleGroup.append("path")
+                                    .datum(graticule)
+                                    .attr("class", "graticule")
+                                    .attr("d", sphereWorldPath);
 
   // Call the path for the bottom layer of the sphere
   // planetSeaGroup.selectAll( "path" )
@@ -318,6 +329,17 @@
   //     rScale.range([rangeScale(1), 2, .1])
   //   }
   // });
+
+  function zoomed() {
+    sunGroup.attr("transform", "translate(" + d3.event.translate + ")scale(" + d3.event.scale + ")");
+    planetGroup.attr("transform", "translate(" + d3.event.translate + ")scale(" + d3.event.scale + ")");
+    planetLightGroup.attr("transform", "translate(" + d3.event.translate + ")scale(" + d3.event.scale + ")");
+    planetShadeGroup.attr("transform", "translate(" + d3.event.translate + ")scale(" + d3.event.scale + ")");
+    planetWorldGroup.attr("transform", "translate(" + d3.event.translate + ")scale(" + d3.event.scale + ")");
+    graticuleGroup.attr("transform", "translate(" + d3.event.translate + ")scale(" + d3.event.scale + ")");
+
+    // starsGroup.select(".county-border").style("stroke-width", .5 / d3.event.scale + "px");
+  };
 
     var drawText = svg.append("text")
                     .attr("x", w/2)
