add stories, update hub

--- a/hub/index.html
+++ b/hub/index.html
@@ -438,6 +438,84 @@
 						</a>
 					</li>
 
+					<li>
+						<a class="page-link" href="../story/007d.html">
+							<img class="page-image" src="img/007d.jpg">
+						</a>
+					</li>
+
+					<li>
+						<a class="page-link" href="../story/007g.html">
+							<img class="page-image" src="img/007g.gif">
+						</a>
+					</li>
+					
+					<li>
+						<a class="page-link" href="../story/007h.html">
+							<img class="page-image" src="img/007h.gif">
+						</a>
+					</li>
+
+					<li>
+						<a class="page-link" href="../story/007i.html">
+							<img class="page-image" src="img/007i.gif">
+						</a>
+					</li>
+
+					<li>
+						<a class="page-link" href="../story/007j.html">
+							<img class="page-image" src="img/007j.gif">
+						</a>
+					</li>
+
+					<li>
+						<a class="page-link" href="../story/007k.html">
+							<img class="page-image" src="img/007k.gif">
+						</a>
+					</li>
+
+					<li>
+						<a class="page-link" href="../story/007l.html">
+							<img class="page-image" src="img/007l.gif">
+						</a>
+					</li>
+
+					<li>
+						<a class="page-link" href="../story/007m.html">
+							<img class="page-image" src="img/007m.gif">
+						</a>
+					</li>
+
+					<li>
+						<a class="page-link" href="../story/007n.html">
+							<img class="page-image" src="img/007n.gif">
+						</a>
+					</li>
+
+					<li>
+						<a class="page-link" href="../story/007o.html">
+							<img class="page-image" src="img/007o.gif">
+						</a>
+					</li>
+
+					<li>
+						<a class="page-link" href="../story/008a.html">
+							<img class="page-image" src="img/008a.jpg">
+						</a>
+					</li>
+
+					<li>
+						<a class="page-link" href="../story/008f.html">
+							<img class="page-image" src="img/008f.gif">
+						</a>
+					</li>
+
+					<li>
+						<a class="page-link" href="../story/008h.html">
+							<img class="page-image" src="img/008h.gif">
+						</a>
+					</li>
+
 				</ol>
 
 			</div>
