--- a/story/008a.html
+++ b/story/008a.html
@@ -198,7 +198,7 @@
       context.fillRect(0,0,w,h);
 
       // add sun and nametag, but only if zoom level isn't too far out
-      context.fillStyle = designerWhite;
+      context.fillStyle = "white";
       context.beginPath();
       context.arc(w/2, h/2, pointRadius, 0, 2 * Math.PI);
       context.fill();
