--- a/story/008e.html
+++ b/story/008e.html
@@ -197,6 +197,7 @@
 
             var newX = r * Math.cos(angle);
             var newY = r * Math.sin(angle);
+            var newZ = r * Math.sin()
 
             x = newX;
             y = newY;
